--- a/notebooks/Marketing_Campaign_Experiment.ipynb
+++ b/notebooks/Marketing_Campaign_Experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "129ca1cf",
+   "id": "8a146c8d",
    "metadata": {},
    "source": [
     "## Importing libraries"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e0e97e45",
+   "id": "a12dafc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d052fbe",
+   "id": "e55a35e4",
    "metadata": {},
    "source": [
     "## Loading Dataset"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "989d318f",
+   "id": "dfb1cc10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1c3cd6f8",
+   "id": "3c41f9a7",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ed9c839",
+   "id": "121ddb9e",
    "metadata": {},
    "source": [
     "## EDA"
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4eba0fd5",
+   "id": "8ddeeca9",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4fcfc2c3",
+   "id": "3f0a44fb",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0d7aea40",
+   "id": "544725df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4bfd7abe",
+   "id": "4a94e3df",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4391258d",
+   "id": "8c218a39",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0037a189",
+   "id": "e37de90d",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "eaa1afa2",
+   "id": "a819063d",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9b1022ba",
+   "id": "4e516c7a",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "62481abe",
+   "id": "3dddb846",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "46eb5d4d",
+   "id": "75bc48d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "adc08bce",
+   "id": "2a578319",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "837ff799",
+   "id": "e4a1ad18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "dcb0505a",
+   "id": "c40771cc",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "989ca11d",
+   "id": "40d20422",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3c082059",
+   "id": "30292675",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ffe86430",
+   "id": "81a9fc31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "06e8dac5",
+   "id": "352cac57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "11e82f65",
+   "id": "4b6e3a42",
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e2cd0403",
+   "id": "7427da87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "99ffd5f6",
+   "id": "9891c168",
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5e7acd04",
+   "id": "08256365",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "aa2e2f20",
+   "id": "c525df66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "55df3bf4",
+   "id": "671b62ba",
    "metadata": {},
    "outputs": [
     {
@@ -1891,8 +1891,386 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "id": "f0b0bf5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Graduation', 'PhD', 'Master', 'Basic', '2n Cycle'], dtype=object)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.Education.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "9be5ec24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def num_edu_years(education):\n",
+    "    if education == \"Graduation\": \n",
+    "        return 0\n",
+    "    elif education == \"Basic\":\n",
+    "        return 1 \n",
+    "    elif education == \"2n Cycle\":\n",
+    "        return 2\n",
+    "    elif education == \"Master\":\n",
+    "        return 3\n",
+    "    elif education == \"PhD\":\n",
+    "        return 4\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "5ffe990d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"Education_enc\"] = data[\"Education\"].apply(num_edu_years)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "af0c7a4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Year_Birth</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Marital_Status</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Kidhome</th>\n",
+       "      <th>Teenhome</th>\n",
+       "      <th>Dt_Customer</th>\n",
+       "      <th>Recency</th>\n",
+       "      <th>MntWines</th>\n",
+       "      <th>MntFruits</th>\n",
+       "      <th>MntMeatProducts</th>\n",
+       "      <th>MntFishProducts</th>\n",
+       "      <th>MntSweetProducts</th>\n",
+       "      <th>MntGoldProds</th>\n",
+       "      <th>NumDealsPurchases</th>\n",
+       "      <th>NumWebPurchases</th>\n",
+       "      <th>NumCatalogPurchases</th>\n",
+       "      <th>NumStorePurchases</th>\n",
+       "      <th>NumWebVisitsMonth</th>\n",
+       "      <th>AcceptedCmp3</th>\n",
+       "      <th>AcceptedCmp4</th>\n",
+       "      <th>AcceptedCmp5</th>\n",
+       "      <th>AcceptedCmp1</th>\n",
+       "      <th>AcceptedCmp2</th>\n",
+       "      <th>Complain</th>\n",
+       "      <th>Z_CostContact</th>\n",
+       "      <th>Z_Revenue</th>\n",
+       "      <th>Response</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Spending</th>\n",
+       "      <th>Home_Situation</th>\n",
+       "      <th>kids_total</th>\n",
+       "      <th>kids_ornot</th>\n",
+       "      <th>Education_enc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2235</th>\n",
+       "      <td>10870</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>Graduation</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>61223.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2013-06-13</td>\n",
+       "      <td>46</td>\n",
+       "      <td>709</td>\n",
+       "      <td>43</td>\n",
+       "      <td>182</td>\n",
+       "      <td>42</td>\n",
+       "      <td>118</td>\n",
+       "      <td>247</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>47</td>\n",
+       "      <td>1341</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2236</th>\n",
+       "      <td>4001</td>\n",
+       "      <td>1946</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>64014.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014-06-10</td>\n",
+       "      <td>56</td>\n",
+       "      <td>406</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68</td>\n",
+       "      <td>444</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2237</th>\n",
+       "      <td>7270</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>Graduation</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>56981.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-01-25</td>\n",
+       "      <td>91</td>\n",
+       "      <td>908</td>\n",
+       "      <td>48</td>\n",
+       "      <td>217</td>\n",
+       "      <td>32</td>\n",
+       "      <td>12</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1241</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2238</th>\n",
+       "      <td>8235</td>\n",
+       "      <td>1956</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>69245.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014-01-24</td>\n",
+       "      <td>8</td>\n",
+       "      <td>428</td>\n",
+       "      <td>30</td>\n",
+       "      <td>214</td>\n",
+       "      <td>80</td>\n",
+       "      <td>30</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>58</td>\n",
+       "      <td>843</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2239</th>\n",
+       "      <td>9405</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>52869.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2012-10-15</td>\n",
+       "      <td>40</td>\n",
+       "      <td>84</td>\n",
+       "      <td>3</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>60</td>\n",
+       "      <td>172</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ID  Year_Birth   Education Marital_Status   Income  Kidhome  \\\n",
+       "2235  10870        1967  Graduation        Married  61223.0        0   \n",
+       "2236   4001        1946         PhD       Together  64014.0        2   \n",
+       "2237   7270        1981  Graduation       Divorced  56981.0        0   \n",
+       "2238   8235        1956      Master       Together  69245.0        0   \n",
+       "2239   9405        1954         PhD        Married  52869.0        1   \n",
+       "\n",
+       "      Teenhome Dt_Customer  Recency  MntWines  MntFruits  MntMeatProducts  \\\n",
+       "2235         1  2013-06-13       46       709         43              182   \n",
+       "2236         1  2014-06-10       56       406          0               30   \n",
+       "2237         0  2014-01-25       91       908         48              217   \n",
+       "2238         1  2014-01-24        8       428         30              214   \n",
+       "2239         1  2012-10-15       40        84          3               61   \n",
+       "\n",
+       "      MntFishProducts  MntSweetProducts  MntGoldProds  NumDealsPurchases  \\\n",
+       "2235               42               118           247                  2   \n",
+       "2236                0                 0             8                  7   \n",
+       "2237               32                12            24                  1   \n",
+       "2238               80                30            61                  2   \n",
+       "2239                2                 1            21                  3   \n",
+       "\n",
+       "      NumWebPurchases  NumCatalogPurchases  NumStorePurchases  \\\n",
+       "2235                9                    3                  4   \n",
+       "2236                8                    2                  5   \n",
+       "2237                2                    3                 13   \n",
+       "2238                6                    5                 10   \n",
+       "2239                3                    1                  4   \n",
+       "\n",
+       "      NumWebVisitsMonth  AcceptedCmp3  AcceptedCmp4  AcceptedCmp5  \\\n",
+       "2235                  5             0             0             0   \n",
+       "2236                  7             0             0             0   \n",
+       "2237                  6             0             1             0   \n",
+       "2238                  3             0             0             0   \n",
+       "2239                  7             0             0             0   \n",
+       "\n",
+       "      AcceptedCmp1  AcceptedCmp2  Complain  Z_CostContact  Z_Revenue  \\\n",
+       "2235             0             0         0              3         11   \n",
+       "2236             1             0         0              3         11   \n",
+       "2237             0             0         0              3         11   \n",
+       "2238             0             0         0              3         11   \n",
+       "2239             0             0         0              3         11   \n",
+       "\n",
+       "      Response  Age  Spending  Home_Situation  kids_total  kids_ornot  \\\n",
+       "2235         0   47      1341               1           1           1   \n",
+       "2236         0   68       444               1           3           1   \n",
+       "2237         0   33      1241               0           0           0   \n",
+       "2238         0   58       843               1           1           1   \n",
+       "2239         1   60       172               1           2           1   \n",
+       "\n",
+       "      Education_enc  \n",
+       "2235              0  \n",
+       "2236              4  \n",
+       "2237              0  \n",
+       "2238              3  \n",
+       "2239              4  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1db37757",
+   "id": "fbd66d1f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1900,7 +2278,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe78e814",
+   "id": "17722bbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99e7de68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d66426cd",
    "metadata": {},
    "outputs": [],
    "source": []
